2012-01-12  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* include/mcs/BeliefTable.h: Add BeliefTablePtr.

	* include/mcs/BeliefStateOffset.h: Add NO_BLOCKS() and SIZE_BS().
	* src/mcs/BeliefStateOffset.cpp: Likewise.

	* include/mcs/BeliefStateAdder.h: New file.
	* include/parser/DLVResultGrammar.h: Likewise.
	* include/parser/DLVResultParser.h: Likewise.
	* include/parser/ParserState.h: Likewise.
	* src/parser/DLVResultGrammar.cpp: Likewise.
	* src/parser/DLVResultParser.cpp: Likewise.

2012-01-04  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* testsuite/Makefile.am: Replace testJoinThread by testJoiner.

	* src/mcs/StreamingJoiner.cpp: Fix bug: initialization and receive NULL.

	* include/mcs/NewBeliefState.h: Fix bug: epsilon bits for belief sets.
	* src/mcs/NewBeliefState.cpp: Likewise.
	* src/mcs/BeliefStateOffset.cpp: Likewise.

	* testsuite/testJoiner.cpp: New file.

2012-01-03  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* include/mcs/StreamingJoiner.h: Finish Joiner.
	* src/mcs/StreamingJoiner.cpp: Likewise.

	* include/mcs/NewBaseDispatcher.h: include.

	* include/mcs/NewBeliefState.h: New typedef(s) for Joiner.

	* include/mcs/NewJoinerDispatcher.h: Dispatcher by query_id.

	* include/mcs/QueryID.h: Add unset_neighbor_offset().

	* include/mcs/ReturnedBeliefState.h: ReturnedBeliefStateList now contains pointers.
	* src/mcs/ReturnedBeliefState.cpp: Likewise.
	* testsuite/testBeliefState.cpp: Adapt testcase.

	* include/mcs/Makefile.am: Add BaseJoiner.h and StreamingJoiner.h.
	* src/mcs/Makefile.am: Add BaseJoiner.cpp and StreamingJoiner.cpp.

	* include/mcs/BaseJoiner.h: New file.
	* src/mcs/BaseJoiner.cpp: Likewise.
	* include/mcs/StreamingJoiner.h: Likewise.
	* src/mcs/StreamingJoiner.cpp: Likewise.

2012-01-02  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* include/mcs/Makefile.am: Add NewJoinerDispatcher.h.
	* include/mcs/NewJoinerDispatcher.h: Newfile.

	* include/mcs/JoinIn.h: Small bug.

	* testsuite/testMessageDispatcher.cpp: Update testcase.
